# django-extensions

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml
docs/: image-extension.md  middleware.md  seo-extension.md  subdomain-redirect-extension.md
essential_extensions/: __init__.py  admin.py  apps.py  middleware.py  mixins.py  widgets.py
essential_extensions/management/commands/: reset_sequences.py
essential_extensions/migrations/: 0001_initial.py  __init__.py
essential_extensions/models/: ImageExtension.py  SubdomainRedirect.py
essential_extensions/static/admin/js/: generic_object_selector.js
essential_extensions/templates/seo/: meta_tags.html
essential_extensions/templatetags/: image_tags.py  json_data_tags.py  seo_tags.py
