[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-extensions"
version = "0.1.0"
description = "Essential Django extensions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TUSKION", email = "opensource@tuskion.com"}
]
maintainers = [
    {name = "TUSKION", email = "opensource@tuskion.com"}
]
keywords = ["django", "extensions", "images", "subdomain", "redirects"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2,<5.1",
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-django>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
    "pre-commit>=2.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/TUSKION/django-extensions"
Documentation = "https://github.com/TUSKION/django-extensions"
Repository = "https://github.com/TUSKION/django-extensions"
"Bug Tracker" = "https://github.com/TUSKION/django-extensions/issues"

[project.scripts]
# Add any command-line scripts here if needed

[tool.setuptools.packages.find]
where = ["."]
include = ["essential_extensions*"]

[tool.setuptools.package-data]
"essential_extensions" = ["templates/**/*", "static/**/*", "migrations/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "PIL.*",
]
ignore_missing_imports = true 