[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-extensions"
version = "0.1.1"
description = "Essential Django extensions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TUSKION", email = "opensource@tuskion.com"}
]
maintainers = [
    {name = "TUSKION", email = "opensource@tuskion.com"}
]
keywords = ["django", "extensions", "images", "subdomain", "redirects"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
]
requires-python = ">=3.11"
dependencies = [
    "Django>=5.1",
    "Pillow>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/TUSKION/django-extensions"
Documentation = "https://github.com/TUSKION/django-extensions"
Repository = "https://github.com/TUSKION/django-extensions"
"Bug Tracker" = "https://github.com/TUSKION/django-extensions/issues"

[project.scripts]
# Add any command-line scripts here if needed

[tool.setuptools.packages.find]
where = ["."]
include = ["essential_extensions*"]

[tool.setuptools.package-data]
"essential_extensions" = ["templates/**/*", "static/**/*", "migrations/**/*"]

